--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta http-equiv='X-UA-Compatible' content='chrome=1'></meta>
 <meta http-equiv='Content-Type' content='text/html;charset=utf-8'></meta>
-<title>Titulo pestaña</title>
+<title>The map of the world tablet</title>
 <script type='text/javascript' src='https://www.x3dom.org/download/x3dom.js'> </script>
 <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'/>
 </head>
 <body>
 <h1>Cabecera página</h1>
 <p>
-    Texto previo
+    Mapa mundi, tablilla
 </p>
 <x3d width='800px' height='800px'>
 <scene>
@@ -20,7 +20,7 @@
 </scene>
 </x3d>
 <p>
-    Texto final
+    Curso Geografía
 </p>
   </body>
 </html>
